--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -58,3 +58,34 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.gameboard {
+    background: #f5f5f5;
+    border: 1px solid #e5e5e5;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+}
+
+.tile {
+    background-color: rgb(255, 237, 146);
+    position: absolute;
+    border: solid 1px #2a2a2a;
+}
+
+.rosette {
+    background-color: rgb(255, 165, 165);
+}
+
+.piece {
+    background-color: rgb(247, 247, 247);
+    border: solid 1px #2a2a2a;
+    border-radius: 50%;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+    position: absolute;
+}
+
+.piece-black {
+    background-color: rgb(0, 0, 0);    
+}
