--- a/Pages/Game.razor
+++ b/Pages/Game.razor
@@ -1,14 +1,19 @@
 @page "/game/{GameId}"
 @inject Ur.Data.GameRepo repo;
 
-<h1>Game of Ur</h1>
+<h1>@TheGame?.Title</h1>
 
-<p>Started: @game?.StartTime</p>
+<p>Started: @TheGame?.StartTime</p>
 
-<GameBoard GameId=@GameId />
+@if (TheGame == null) {
+    <p>No game found</p>
+}
+else {
+    <GameBoard Game=@TheGame />
+}
 
 @code {
-    Ur.Data.Game? game => repo.FindGame(GameId);
+    Ur.Data.Game TheGame => repo.FindGame(GameId);
 
     [ParameterAttribute]
     public string GameId { get; set; }
