--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -88,6 +88,7 @@ a, .btn-link {
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
     position: absolute;
     border-style: inset;
+    transition: left 0.5s, top 0.5s;
 }
 
 .piece-black {
